fix wrap scroll

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -52,6 +52,7 @@
 .chat-wrap {
     height: 350px;
     margin-top: 10px;
+    overflow: scroll;
 }
 
 #chat-send {
